contrast fix
adjusted colors

--- a/styles/default.css
+++ b/styles/default.css
@@ -4,9 +4,9 @@
 
 :root {
 	--tangerine: #F27F0C;
-	--buttercup: #F7AD19;
+	--buttercup: #F7C45E; /* original f7ad19 */
 	--teal-blue: #053F5C;
-	--pelorous: #429EDB;
+	--pelorous: #A9D5EF; /*original 429edb */
 	--sky-blue: #9FE7F5;
 }
 
